--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,5 +1,17 @@
 
-<h3>Property Binding</h3>
-<img [src]="imageUrl">
+
+
+<h3>Attribute Binding</h3>
+<table border="1">
+    <tr>
+        <td> A</td>
+        <td> B</td>
+        <td> C</td>
+    </tr>
+    <tr>
+        <td [attr.colspan]="colspan"> colspan row</td>
+    </tr>
+</table>
+
 
 
