--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,9 +1,9 @@
 
 
 
-<h3>Event Binding</h3>
+<h3>Two-way Binding</h3>
+<input [(ngModel)]="email" (keyUp.enter)="onKeyUp()"/>
 
-<button (click)="onSave($event)">Save</button>
 
 
 
